# xxx

./: CMakeLists.txt  Doxyfile  LICENSE  README.md
doc/: footer.html  xxx.html
src/: logger.cxx  xxx.cxx
test/: CMakeLists.txt  main.cxx
xxx/: exceptions.hxx  finally.hxx  logger.hxx  str.hxx  uc.hxx  xexceptions.hxx  xxx.hxx
